--- a/style.css
+++ b/style.css
@@ -10,31 +10,10 @@
 }
 
 html,body{
-    /* width: 100%;
-    height: 100%; */
+   
     font-family: "Mansalva", sans-serif;
 }
-/* 
-#main{
-    width: 100%;
-    height: 100%;
-    background-color: rgb(92, 101, 137);
-    display: flex;
-    align-items: center;
-    justify-content: center;
 
-} */
-/* 
-#panel {
-    width: 80%;
-    height: 80%;
-    background-color: rgb(232, 220, 220);
-    border-radius: 10px;
-    overflow: hidden;
-} */
-/* 
-#ptop{
-    width: 100%;
-    height: 100px;
-    background-color: silver;
-} */
+#panelBottom {
+    cursor: pointer;
+  }
